Cambios en el envio del correo

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
                         <div class="form-group col-md-6">
                             <label for="date" style="color: gray; font-family: 'SuisseIntl-Regular';">Preserence
                                 schedule</label>
-                            <input type="date" class="form-control" id="date" placeholder="Date" name="date_start">
+                            <input type="date" class="form-control" id="date" placeholder="Date" name="date">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="preserence" style="color: gray; font-family: 'SuisseIntl-Regular';">Preserence
                                 schedule</label>
-                            <input type="date" class="form-control" id="preserence" placeholder="Preserence schedule"
-                                name="date_end">
+                            <input type="time" class="form-control" id="preserence" placeholder="Preserence schedule"
+                                name="time">
                         </div>
                         <p class="col-12 pt-3">Contact me By</p>
                         <div class="form-check form-check-inline">
@@ -161,7 +161,7 @@
                             </label>
                         </div>
                     </div>
-                    <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
+                    <div class="g-recaptcha" data-sitekey="6LccFzgdAAAAAMllClIy_c_SDAV8mqvnpGCSkL1y"></div>
                     <div class="text-center mt-4">
                         <button type="submit" class="btn btn-secondary">Send</button>
                     </div>
