--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                     </div>
                     <div class="form-row">
                       <div class="form-group col-md-6">
-                         <label for="date" style="color: gray; font-family: 'SuisseIntl-Regular';">Preserence schedule</label>
+                         <label for="date" style="color: gray; font-family: 'SuisseIntl-Regular';">Date</label>
                          <input type="date" class="form-control" id="date" placeholder="Date">
                       </div>
                       <div class="form-group col-md-6">
                         <label for="preserence" style="color: gray; font-family: 'SuisseIntl-Regular';">Preserence schedule</label>
-                        <input type="date" class="form-control" id="preserence" placeholder="Preserence schedule">
+                        <input type="time" class="form-control" id="preserence" placeholder="Preserence schedule">
                       </div>
                       <p class="col-12 pt-3">Contact me By</p>
                       <div class="form-check form-check-inline">
