--- a/index.html
+++ b/index.html
@@ -117,35 +117,44 @@
                         <input type="tel" class="form-control" id="cellphone" placeholder="Cell phone" name="phone">
                     </div>
                     <div class="form-row">
-                      <div class="form-group col-md-6">
-                         <label for="date" style="color: gray; font-family: 'SuisseIntl-Regular';">Date</label>
-                         <input type="date" class="form-control" id="date" placeholder="Date">
-                      </div>
-                      <div class="form-group col-md-6">
-                        <label for="preserence" style="color: gray; font-family: 'SuisseIntl-Regular';">Preserence schedule</label>
-                        <input type="time" class="form-control" id="preserence" placeholder="Preserence schedule">
-                      </div>
-                      <p class="col-12 pt-3">Contact me By</p>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                        <label class="form-check-label pr-4" for="whatsapp" style="color: gray; font-family: 'SuisseIntl-Regular';">Whatsapp</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="email">
-                        <label class="form-check-label pr-4" for="inlineRadio2" style="color: gray; font-family: 'SuisseIntl-Regular';">Email</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="call">
-                        <label class="form-check-label pr-4" for="inlineRadio2" style="color: gray; font-family: 'SuisseIntl-Regular';">Call</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="messenger">
-                        <label class="form-check-label" for="inlineRadio2" style="color: gray; font-family: 'SuisseIntl-Regular';">Messenger</label>
-                      </div>
-                      
+                        <div class="form-group col-md-6">
+                            <label for="date" style="color: gray; font-family: 'SuisseIntl-Regular';">Date</label>
+                            <input type="date" class="form-control" id="date" placeholder="Date">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="preserence" style="color: gray; font-family: 'SuisseIntl-Regular';">Preserence
+                                schedule</label>
+                            <input type="time" class="form-control" id="preserence" placeholder="Preserence schedule">
+                        </div>
+                        <p class="col-12 pt-3">Contact me By</p>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                value="whatsapp">
+                            <label class="form-check-label pr-4" for="whatsapp"
+                                style="color: gray; font-family: 'SuisseIntl-Regular';">Whatsapp</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                value="email">
+                            <label class="form-check-label pr-4" for="inlineRadio2"
+                                style="color: gray; font-family: 'SuisseIntl-Regular';">Email</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                value="call">
+                            <label class="form-check-label pr-4" for="inlineRadio2"
+                                style="color: gray; font-family: 'SuisseIntl-Regular';">Call</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                value="messenger">
+                            <label class="form-check-label" for="inlineRadio2"
+                                style="color: gray; font-family: 'SuisseIntl-Regular';">Messenger</label>
+                        </div>
+
                     </div>
-                    <!-- <div class="g-recaptcha" data-sitekey="6LccFzgdAAAAAMllClIy_c_SDAV8mqvnpGCSkL1y"></div> -->
-                    <div class="g-recaptcha mt-3" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div>
+                    <div class="g-recaptcha" data-sitekey="6LccFzgdAAAAAMllClIy_c_SDAV8mqvnpGCSkL1y"></div>
+                    <!-- <div class="g-recaptcha mt-3" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></div> -->
                     <div class="text-center mt-4">
                         <button type="submit" class="btn btn-secondary">Send</button>
                     </div>
